lib/src/compiler/tests/testdata/errors/56.out
error[E002]: wrong type
 --> line:4:5
  |
4 |     test_proto2(1)
  |     ^^^^^^^^^^^ expression should be `function`, but it is `struct`
  |